mule-user-guide/v/3.4/datamapper-visual-reference.adoc
= Anypoint DataMapper Visual Reference

This page contains annotated images of all of the major views used in Anypoint DataMapper. It is meant as a reference for the discussions in the rest of the DataMapper documentation, to help identify each control in the UI.

== Displaying the Graphical Mapping Editor

To display the graphical mapping editor, double-click the *DataMapper* building block in the Mule Studio canvas, or double-click a .GRF file in the mappings folder in your project. Studio highlights the *Data Mapping* tab in the console and displays the editor (see image below).

image:/docs/download/attachments/95393431/studio.total.png?version=1&modificationDate=1374598540589[image]

== Overview of the Graphical Mapping Editor

The image below describes the different icons, indicators and tools in DataMapper's graphical mapping editor. For a description of each item, consult the numbered table below the image.

For details on defining your mapping, see https://www.mulesoft.org/documentation/display/34X/Defining+DataMapper+Input+and+Output+Metadata[Defining DataMapper Input and Output Metadata].

image:/docs/download/attachments/95393431/DEF.dmview-refs.png?version=1&modificationDate=1374598540803[image]

[width="100%",cols=",",options="header"]
|===
|Number |Description
|1 |*Infer Metadata* tool for input metadata. Click to reload or recreate your mapping's input metadata without having to reconfigure your mapping flow from scratch. See link:/documentation/display/34X/Defining+DataMapper+Input+and+Output+Metadata[Defining DataMapper Input and Output Metadata] for details.
|2 a|
*Add* tool for input data. Click to add elements to the mapping, including:

* Metadata fields
* Rules
* Input and output arguments
* Lookup tables

|3 |*Remove Selected Field* ** tool. Select a field, then click the tool to remove the selected field.
|4 a|
Input *Properties* tool. Click to open the *Properties* configuration window. Configurable properties will vary according to the input type. The image below shows the *Properties* configuration window.

image:/documentation/download/thumbnails/122752185/csv.input.props.png?version=1&modificationDate=1408635596694[image]

|5 a|
*Show/Hide Unrelated Elements* tool. Default position is open, showing the hide icon image:/documentation/download/attachments/122752185/hide.icon.png?version=1&modificationDate=1409171256134[image].

* When open, displays all elements in the input mapping pane that are not collapsed, whether or not you can map them in the current mapping level.
* When closed, hides all elements in the input pane that are not mappable in the currently displayed mapping level.

|6 |Input pane *Search Filter*. Type a string to display only elements in the input data that contain the string.
|7 |*Current Element Mapping* indicator/drop-down menu. Indicates the currently-displayed mapping level for multiple-level data mappings such as nested lists. The drop-down menu allows you to instantly switch between mapping levels.
|8 a| *Add Mapping* icon: Click to add a new mapping. DataMapper displays the *Structure mapping editor* configuration window, displayed below.

image:/documentation/download/attachments/122752185/DM_structure-mapping-editor.png?version=1&modificationDate=1408635596717[image]

In the *Name* field, type a descriptive name for the new mapping.

In the *Condition* field, type an optional XPath condition. If you define a condition, the mapping will only process source elements that match the condition.

[NOTE]
====
The *Condition* field is only displayed when input type is XML.
====

For more information on structured mapping, see link:/documentation/display/34X/DataMapper+Flat-to-Structured+and+Structured-to-Flat+Mapping[Example: Flat-to-Structured and Structured-to-Flat Mapping].

|9 |*Edit Mapping* tool. Click to modify the name of the current mapping level.
|10 |*Remove Mapping* tool. Click to remove the current mapping level.
|11 |*Infer Metadata* tool for output metadata. Click to reload or recreate your mapping's output metadata without having to reconfigure your mapping flow from scratch. See link:/documentation/display/34X/Defining+DataMapper+Input+and+Output+Metadata[Defining Input and Output Metadata]  for details.
|12 |*Add* tool for output data. Click to add a metadata field to the output mapping.
|13 |*Remove Selected Field* ** tool. Select a field, then click the tool to remove the selected field.
|14 |*Click Field Assignments* tool. Click to delete the selected field(s) assigned input values. To clear the values of multiple fields, select the fields by clicking the first field, holding down the `SHIFT` key and scrolling over the adjacent fields.
|15 a|
Output *Properties* tool. Click to open the *Properties* configuration window. Configurable properties will vary according to the input type. Shown here are

|16 a|
*Show/Hide Unrelated Elements* tool. Default position is open, showing the hide icon image:/documentation/download/attachments/122752185/hide.icon.png?version=1&modificationDate=1409171256134[image].

* When open, displays all elements in the input mapping pane that are not collapsed, whether or not you can map them in the current mapping level.
* When closed, hides all elements in the input pane that are not mappable in the currently displayed mapping level.

|17 |Output pane *Search Filter*. Type a string to display only elements in the output data that contain the string.
|18 |*Graphical* view button. Click to display DataMapper's graphical view, displayed by default and illustrated in link:#DataMapperVisualReference-OverviewoftheGraphicalMappingEditor[Overview of the Graphical Mapping Editor].
|19 |*Script* view button. Click to display DataMapper's script view. For details, see link:#DataMapperVisualReference-OverviewoftheScriptView[Overview of the Script View].
|20 |*Preview* button. Click to display DataMapper's preview pane, where you can run a preview of your mapping. For details, see link:#DataMapperVisualReference-OverviewofDataMapperPreview[Overview of DataMapper Preview].
|===

== Overview of the Script View

image:/docs/download/attachments/95393431/script-overview.png?version=1&modificationDate=1374598541221[image]

[width="100%",cols=",",options="header"]
|===
|Number |Description
|1 |Input and output information pane. Here you can access information about input and output fields and arguments, lookup tables, and default functions. You can also insert an input or output field or a function into the script by click-and-dragging the function from the information pane to the script editor.
|2 |*Current Element Mapping* indicator/drop-down menu. Indicates the currently-displayed mapping level for multiple-level data mappings such as nested lists, and allows you to select which mapping level to view and edit.
|3 |*Script* view button. Click to select the Script view.
|4 |Script editor. Click anywhere in the script to edit.
|5 |*Default Functions* in the input and output information pane. To insert a function into the script, click and drag the function to the desired location in the script editor.
|===

== Overview of DataMapper Preview

DataMapper's preview feature allows you to test your mapping using a specific input file and preview the results. For details, see link:/documentation/display/34X/Previewing+DataMapper+Results+on+Sample+Data[Previewing DataMapper Results on Sample Data].

image:/docs/download/attachments/95393431/preview-overview.png?version=1&modificationDate=1374598541424[image]

[width="100%",cols=",",options="header"]
|===
|Number |Description
|1 |*Input Data* input field. Use to select the path of the file to read data from. Alternatively, click the folder image:/documentation/download/attachments/122752185/input.folder.in.preview.png?version=1&modificationDate=1409680644379[image]button to the right of the field to select the file using your system's file browser.

|2 a|
*Text* / *Graphic View* selector. Click to switch between graphic view (default, below left) and text view (below right).

image:/documentation/download/thumbnails/122752185/graphview.png?version=1&modificationDate=1409680775449[image]   image:/documentation/download/thumbnails/122752185/textview.png?version=1&modificationDate=1409680861254[image]
|3 |*Input Arguments* button. Click to enter input arguments for your preview (for details, see "Using Data Mapping Input and Output Arguments" in link:/documentation/display/34X/Building+a+Mapping+Flow+in+the+Graphical+Mapping+Editor[Building a Mapping Flow in the Graphical Mapping Editor]).
|4 |*Run* button. Click to run a preview of your mapping and display the results.
|5 |*Preview* button. Click to display the Preview.
|6 |Preview results pane. Displays the results of the preview in graphic or text format.
|===
